# ChangeLog for x11-drivers/nvidia-drivers
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.132 2009/02/03 18:53:33 ricmm Exp $

*nvidia-drivers-96.43.10 (03 Feb 2009)

  03 Feb 2009; Ricardo Mendoza <ricmm@gentoo.org>
  +nvidia-drivers-96.43.10.ebuild:
  Version bump. See http://www.nvnews.net/vbulletin/showthread.php?t=126954

  31 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  nvidia-drivers-96.43.09.ebuild:
  Backport the missing bits from the 100. ebuild for x86-fbsd and keyword it
  since this is apparently the version I need for my GeForce2 MX 400

*nvidia-drivers-180.27 (30 Jan 2009)

  30 Jan 2009; Daniel Gryniewicz <dang@gentoo.org>
  +nvidia-drivers-180.27.ebuild:
  Proxy bump to nvidia-drivers-180.27 for cardoe

  20 Jan 2009; Peter Alfredsen <loki_val@gentoo.org>
  nvidia-drivers-96.43.09.ebuild:
  Non-maintainer commit: Changing <x11-base/xorg-server-1.4.99 to
  <x11-base/xorg-server-1.5.99 per bug 252359. Tested on Geforce FX 5600,
  works as well as can be expected. Two users reported it working on bug
  252359.

*nvidia-drivers-180.22 (16 Jan 2009)

  16 Jan 2009; Doug Goldstein <cardoe@gentoo.org>
  +nvidia-drivers-180.22.ebuild:
  add new version. add vdpau support

  25 Dec 2008; Markus Meier <maekke@gentoo.org>
  nvidia-drivers-71.86.07.ebuild, nvidia-drivers-96.43.09.ebuild,
  nvidia-drivers-173.14.15.ebuild, nvidia-drivers-177.82.ebuild:
  x86 stable, bug #252482

  25 Dec 2008; Thomas Anderson <gentoofan23@gentoo.org>
  nvidia-drivers-71.86.07.ebuild, nvidia-drivers-96.43.09.ebuild,
  nvidia-drivers-173.14.15.ebuild, nvidia-drivers-177.82.ebuild:
  stable amd64, bug 252482. Stable for linux 2.6.27 stabilization

  25 Dec 2008; Mike Frysinger <vapier@gentoo.org>
  +files/nvidia-2.6.28.patch, nvidia-drivers-177.82.ebuild:
  Add patch from upstream for linux 2.6.28 support.
