@@ -32,6 +32,7 @@ DIST NVIDIA-Linux-x86-180.22-pkg0.run 13205766 RMD160 b2bf60bd3b2dde36989e25147b
 DIST NVIDIA-Linux-x86-180.27-pkg0.run 13293953 RMD160 850c9a89af2cc3946d579157012ab2816864b8e0 SHA1 9bfbc7f7bfcc970807d578748aba8f4445758987 SHA256 b5a05dc831b99eb0a7082abca7246851cd1fa030080aa4e8313100989713c21a
 DIST NVIDIA-Linux-x86-71.86.06-pkg0.run 5261179 RMD160 87541a06f384b567b5762bf5e01faee7c4983fc0 SHA1 744b7885dcb99b1cbc9d3f61a755644f149eb0c9 SHA256 bd89aa8656fbc49f0cf0b5e9d6975f2345d7363ca240f7b67d92690ad8e3e1d7
 DIST NVIDIA-Linux-x86-71.86.07-pkg0.run 5264394 RMD160 764111fb8413452ba23ff9c6488de6974257dd84 SHA1 1c71f68b7460f0ac0a8abe07f56ea7876b0496e3 SHA256 06019159b99fd4b7f983eaf8d4f9b5b15b389d328d8606eee2bb62f1b9b9341b
+DIST NVIDIA-Linux-x86-71.86.08-pkg0.run 5274646 RMD160 73ac12d2679c38e17de9fbda9ed95a9331f3cf9d SHA1 24144312f514d883b0cd4059d0e2f34f6c41e139 SHA256 072afdcdb46f3ecdb88a0d2e15002a00c4314018d2985556c54395545d64aa18
 DIST NVIDIA-Linux-x86-96.43.07-pkg0.run 6595902 RMD160 beeb827c53dd8ad8712db9b39fda8219308ff05e SHA1 4820162119f81a30b665f37fd8d772545d921be4 SHA256 8a61ad352bc7f3aceebe3fd3fed39354fe13214bb13f7c4ddda557f5bc842515
 DIST NVIDIA-Linux-x86-96.43.09-pkg0.run 7235652 RMD160 0e2aa9244efa4abba6b33462cfb5fdaa32a28cfd SHA1 47d14780acdf0f41b866ed9fc2c3f80f095a9fc0 SHA256 ef4a8378cceb7a1a47028d7a4cf06ab1c3b203e57d853c9f36b5204531bcdfb7
 DIST NVIDIA-Linux-x86-96.43.10-pkg0.run 7792883 RMD160 91cc61f7fc05d7469c10f60501ab3588d0575952 SHA1 dd5915b13c3144b959ba61739fff4ed53a18f927 SHA256 fad5a53dcbd3032b4cabb3104dc3a25d37a4a0d8ed0e18aaf6f0c572d1666d31
@@ -44,7 +45,8 @@ DIST NVIDIA-Linux-x86_64-177.82-pkg2.run 19416201 RMD160 82a7d9f38965a256d270f2e
 DIST NVIDIA-Linux-x86_64-180.22-pkg2.run 20754738 RMD160 162ca2d4434ff8c781cba23c9d851deeb847c8d0 SHA1 5fb516644e1394917e9466dfe0d79c3b15dc6601 SHA256 bb3727373d34f68de24cff36fc05d9bdbfd3d20633bbcdb15d88b11251d6cc7b
 DIST NVIDIA-Linux-x86_64-180.27-pkg2.run 20932473 RMD160 8dcb9c4bf48c3d08808145194d1902cc466a7754 SHA1 46c7f403ca27bd52c83d8e6f15ade4317efeb914 SHA256 d09056c33f7c4cc72e926da77f17b8dc30b5542e9d4bd90a3b4187b9a7b8382b
 DIST NVIDIA-Linux-x86_64-71.86.06-pkg2.run 8380369 RMD160 dece285c6e02da8e788d977c2df114b3bbf8cc0f SHA1 518dd3e4d8ff484a6809184064d39afe0004ef45 SHA256 00f21f8ef75eeade437bb611fac98c4df6c4bef82293ad1d4506020f7004b57b
-DIST NVIDIA-Linux-x86_64-71.86.07-pkg2.run 8380439 RMD160 5ba261e0f5f25868236ca47768167dd913786a23 SHA1 de7c6951bfc524d2decbe729346e3af351f1d8cb SHA256 e42e004647225086cd2bceb207d3575974188133cb4d5e497188df967362cf39
+DIST NVIDIA-Linux-x86_64-71.86.07-pkg2.run 7482160 RMD160 138ab5b8bbfcc71009e9b5b8af9d1936756d7e2b SHA1 14718aba2d7e48b4dfd3f862808595e3fcb17963 SHA256 33c8f0c6b19e09099a3f83e7142092581af3339725a91c9ba3f983234dfd8532
+DIST NVIDIA-Linux-x86_64-71.86.08-pkg2.run 8386132 RMD160 5860272e5c1fab536362498c00e2021d0b18f682 SHA1 764ce3af14d3cd32db6f01879962ea7eda34d413 SHA256 97ae2082e91e01ab802d309444dae49227cca6bbe0240deff2cdd387bd7503fa
 DIST NVIDIA-Linux-x86_64-96.43.07-pkg2.run 10201418 RMD160 a8001232a5f2108a7ed8f2816487873317ebf018 SHA1 7c6e4f8050f1a8221efb458d350b6853f00d2cb4 SHA256 37efff3be9404fc936a074ce2c9e9a189568a02c3893d75bf438d5b45682051e
 DIST NVIDIA-Linux-x86_64-96.43.09-pkg2.run 10940888 RMD160 9dfb6264fdd932cb8dd45a6738207593080e67a8 SHA1 6e3061afa0d8424c86a4ebd86e0505233fd4c3a6 SHA256 e5fc926178231a2c4677dc007358e79ebcbdb2ce0def4ec4cc9d5732f3000d54
 DIST NVIDIA-Linux-x86_64-96.43.10-pkg2.run 11587529 RMD160 a39f629c2fa9198506c7658b8990f97246d459c2 SHA1 b14784d8a2c82137a1c5ff010041abcda5c78a52 SHA256 05fd243f4101288242edfde4f6237f2eda0c3cfc7c55f746bd4fb32390da4dd8
@@ -58,8 +60,9 @@ EBUILD nvidia-drivers-180.22.ebuild 15442 RMD160 cc8ef382244b28684e895520c84ef81
 EBUILD nvidia-drivers-180.27.ebuild 15433 RMD160 322166830a8af1a727509c04ce1fa015a98bff40 SHA1 7d0bd6e2739dc690ee9377e013251f338cab0b2a SHA256 47b41453ee12b1758184aee92a39b76414fa5746c0e07c7bc269b61bbbf04c37
 EBUILD nvidia-drivers-71.86.06.ebuild 14138 RMD160 2f713727f51ed4fdcf8e94fa629b8892fe3266b1 SHA1 9ac9d3ccae0978327e782c1ba52f506326d565dc SHA256 ea06b4cf57144afe3a08d0a266e0beced197aa53b88464e76d2f4cde9d62c123
 EBUILD nvidia-drivers-71.86.07.ebuild 14185 RMD160 23342dddcd0936f4bb095887f14d7f29ffce8d66 SHA1 616ddfd373ff9dc886c3d4ec36f1732161c9daa9 SHA256 8708fb576fbb1d35cbd7b235ec35d0f479115ac195202f033e0b785988b1e6eb
+EBUILD nvidia-drivers-71.86.08.ebuild 14186 RMD160 1674c0820fef05e00c7af65b8b619704a6fae19f SHA1 c41caf19a93e1c19a1bb3e74091144ae7149e4b8 SHA256 b8bf988963a3f7bd80e9f49cf77d8f5b044f240d4e0d329e46a0421a16fd28ea
 EBUILD nvidia-drivers-96.43.07.ebuild 14475 RMD160 35dc001755181bdda3e4d0c5be97879d579736a1 SHA1 c5b52dffd298e87c4cd78118bf5ada1f2af770d5 SHA256 07b82b5b503e61212104927ad79e4f75d082e39c0df807800bfaeb9e1874a98d
 EBUILD nvidia-drivers-96.43.09.ebuild 14639 RMD160 196b0ec412f57feac01ca2dda35c582a380b888a SHA1 f7237f6b8e793eaaffe3115c3ec6f84a8f66bcec SHA256 e21c09a244c86fc97385a7f35d1d535f68c59ceac3503e1b00b923f186ecaabf
 EBUILD nvidia-drivers-96.43.10.ebuild 14638 RMD160 9d523f06b1b7b8680029bb10f54c82f73d2c6cfe SHA1 a67739823e27f8fcac0ebc5713b743b6ac2a0f1d SHA256 2d17ebd8061ad91e30e390a399872f76c3562b08738dcb439f460db6f9e588cb
-MISC ChangeLog 30115 RMD160 62fe9cac595011522bfb9ee430f112a1e4794906 SHA1 e1ed007828694d27384592e7a93ac42ccb185fee SHA256 02b21fe25aa89d64f40220d142f626cdd8e9ef29ba52dc7df162d354df2ba9c7
+MISC ChangeLog 30317 RMD160 9f5bdfdc37fcbf77c73a45fd621a4858a7b1c3b3 SHA1 cae244acc49abf94e74de7f9ac982f6c0d1fb34d SHA256 04b0fd2cfd4b4ddac24cc08e127f712c1669c279f3c863643e1a9cd40677975b
 MISC metadata.xml 453 RMD160 4e3149a2f84395713739fb8706ac956a03f581e6 SHA1 7631f2686bf4b40f814aa19e99eb94493659cab2 SHA256 ebf76bf6d7f6494241970099567b3292bb1e10f98ebdb9045ecdf92a44599ae6
