@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/nvidia-drivers
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.132 2009/02/03 18:53:33 ricmm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.133 2009/02/03 20:00:34 ricmm Exp $
+
+*nvidia-drivers-71.86.08 (03 Feb 2009)
+
+  03 Feb 2009; Ricardo Mendoza <ricmm@gentoo.org>
+  +nvidia-drivers-71.86.08.ebuild:
+  Version bump. See http://www.nvnews.net/vbulletin/showthread.php?t=126955
 
 *nvidia-drivers-96.43.10 (03 Feb 2009)
 
